[tool.poetry]
name = "langchain-palyground"
version = "0.1.0"
description = "just a palyground"
authors = ["faker <nspyia2002@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_palyground"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
